syntax = "proto3";

message Bid {
  // product id
  sint64 product_id = 1;

  // initial timestamp
  sint64 timestamp = 2;
  
  // bid price
  sint64 price = 3;

  // owner of the bid - another user
  sint64 agent_id = 4;
}